Atalho para o Feed RSS adicionado

--- a/equipe15/atualizarcurso2.html
+++ b/equipe15/atualizarcurso2.html
@@ -91,42 +91,47 @@ Apenas R$24,99! Clique abaixo para comprar</textarea>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer id="footer">
-        <div class="inner">
-            <div class="content">
-                <section>
-                    <h3>Sobre nós</h3>
-                    <p>Desde o dia 25/11/19, empresas de todo o mundo contam com a VRawr para a criação de um framework
-                        para os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento para
-                        ampliar o conhecimento do programador.</p>
-                </section>
-                <section>
-                    <h4>Categorias</h4>
-                    <ul class="alt">
-                        <li><a href="Contato.html">Contato</a></li>
-                        <li><a href="Localização.html">Localização</a></li>
-                        <li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
-                        <li><a href="DireitosReservados.html">Direitos Reservados</a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h4>Siga nossas redes sociais</h4>
-                    <ul class="plain">
-                        <li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-                        <li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-                        <li><a href="https://instagram.com/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-                        <li><a href="https://github.com/ifal-riolargo/equipe15"><i
-                                    class="icon fa-github">&nbsp;</i>Github</a></li>
-                    </ul>
-                </section>
-            </div>
-            <div class="copyright">
-                &copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio Largo</a>,
-                Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
-            </div>
-        </div>
-    </footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<div class="content">
+				<section>
+					<h3>Sobre nós</h3>
+					<p>Desde o dia 25/11/19, empresas de todo o mundo contam com a VRawr para a criação de um
+						framework
+						para os seus produtos, processos e sistemas. Além disso, utilizamos o nosso conhecimento
+						para
+						ampliar o conhecimento do programador.</p>
+				</section>
+				<section>
+					<h4>Categorias</h4>
+					<ul class="alt">
+						<li><a href="Contato.html">Contato</a></li>
+						<li><a href="Localização.html">Localização</a></li>
+						<li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
+						<li><a href="DireitosReservados.html">Direitos Reservados</a></li>
+					</ul>
+				</section>
+				<section>
+					<h4>Siga nossas redes sociais</h4>
+					<ul class="plain">
+						<li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+						<li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
+						</li>
+						<li><a href="#"><i class="icon fa-rss">&nbsp;</i>Feed RSS</a>
+						</li>
+						<li><a href="https://github.com/ifal-riolargo/equipe15"><i
+									class="icon fa-github">&nbsp;</i>Github</a></li>
+					</ul>
+				</section>
+			</div>
+			<div class="copyright">
+				&copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio
+					Largo</a>,
+				Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
+			</div>
+		</div>
+	</footer>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
