--- a/equipe15/index.html
+++ b/equipe15/index.html
@@ -269,7 +269,7 @@
 						<li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 						<li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
 						</li>
-						<li><a href="https://instagram.com/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a>
+						<li><a href="#"><i class="icon fa-rss">&nbsp;</i>Feed RSS</a>
 						</li>
 						<li><a href="https://github.com/ifal-riolargo/equipe15"><i
 									class="icon fa-github">&nbsp;</i>Github</a></li>
