--- a/equipe15/generic.html
+++ b/equipe15/generic.html
@@ -26,6 +26,7 @@
 			<li><a href="index.html">Página Principal</a></li>
 			<li><a href="artigos.html">Artigos</a></li>
 			<li><a href="cursos.html">Nossos cursos e eventos</a></li>
+			<li><a href="listaEmpregos.html">Oportunidades de emprego</a></li>
 			<li><a href="Contato.html">Contato</a></li>
 			<li><a href="elements.html">Elementos de página</a></li>
 			<li><a href="generic.html">Página Genérica</a></li>
