Correção de BUGS e incorências no site

--- a/equipe15/PoliticaPrivacidade.html
+++ b/equipe15/PoliticaPrivacidade.html
@@ -50,7 +50,7 @@
 						compromisso em zelar pelas informações pessoais que você possa vir a nos fornecer quando visitar
 						algum de nossos sites.</p>
 					<br>
-					<h2>POLÍTICA DE USO DOS SITES DA VRAWR</h2>
+					<h2>POLÍTICA DE USO DO SITE DA VRAWR</h2>
 				</header>
 				<p>O uso dos sites da VRawr, registrados através dos domínios quer podem ser pesquisados clicando
 					aqui e de seus serviços disponíveis é sujeito ao disposto nas cláusulas que se seguem, e obriga
