--- a/equipe15/cadastroEmpregos.html
+++ b/equipe15/cadastroEmpregos.html
@@ -33,46 +33,51 @@
 		</ul>
 	</nav>
 
-	<!-- Heading -->
-	<div id="heading">
-		<h1>Cadastrar emprego</h1>
-	</div>
+	<!-- CTA -->
+	<section id="cta" class="wrapper">
+		<div class="inner">
+			<h2>Cadastrar emprego</h2>
+			<p>“Nunca subestime um nerd, pois um dia você pode pedir emprego a ele.” <br>
+				― Charles Sykes
+			</p>
+		</div>
+	</section>
 
 	<!-- Main -->
 	<section id="main" class="wrapper">
-        <div class="inner">
-            <div class="content">
-                <header>
-                    <h2>Criar emprego</h2>
-                </header>
-                <form method="POST" action="listaEmpregos.html">
-                    <p>Nome do curso <input type="text" name="username" size="52" maxlength="60" /></p>
+		<div class="inner">
+			<div class="content">
+				<header>
+					<h2>Criar emprego</h2>
+				</header>
+				<form method="POST" action="listaEmpregos.html">
+					<p>Nome do curso <input type="text" name="username" size="52" maxlength="60" /></p>
 
-                    <h3>Informações adicionais</h3>
+					<h3>Informações adicionais</h3>
 
-                    <label>
-                        <div class="col-12">
-                            <textarea name="textarea" id="textarea"
-                                placeholder="Caso desejado, informe mais informações necessárias..."
-                                rows="6"></textarea>
-                        </div>
-                    </label>
+					<label>
+						<div class="col-12">
+							<textarea name="textarea" id="textarea"
+								placeholder="Caso desejado, informe mais informações necessárias..."
+								rows="6"></textarea>
+						</div>
+					</label>
 
-                    <a href="listaEmpregos.html">
-                        <input type="submit" name="Cancelar" value="Voltar" onclick=""></a>
-                    <input type="submit" name="enviar" value="Cadastrar emprego" onclick="Evento()">
+					<a href="listaEmpregos.html">
+						<input type="submit" name="Cancelar" value="Voltar" onclick=""></a>
+					<input type="submit" name="enviar" value="Cadastrar emprego" onclick="Evento()">
 
-                </form>
+				</form>
 
-                <script>
-                    function Evento() {
-                        alert('Emprego cadastrado com sucesso!')
-                    }
-                </script>
+				<script>
+					function Evento() {
+						alert('Emprego cadastrado com sucesso!')
+					}
+				</script>
 
-            </div>
-        </div>
-    </section>
+			</div>
+		</div>
+	</section>
 
 	<!-- Footer -->
 	<footer id="footer">
