Modificação do FOOTER do projeto

--- a/equipe15/generic.html
+++ b/equipe15/generic.html
@@ -91,29 +91,32 @@
 				<section>
 					<h4>Categorias</h4>
 					<ul class="alt">
-						<li><a href="Contato.html">Contato</a></li>
-						<li><a href="Localização.html">Localização</a></li>
-						<li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
-						<li><a href="DireitosReservados.html">Direitos Reservados</a></li>
+						<li><a href="Contato.html" target="_blank">Contato</a></li>
+						<li><a href="Localização.html" target="_blank">Localização</a></li>
+						<li><a href="PoliticaPrivacidade.html" target="_blank">Política de Privacidade</a></li>
+						<li><a href="DireitosReservados.html" target="_blank">Direitos Reservados</a></li>
 					</ul>
 				</section>
 				<section>
 					<h4>Siga nossas redes sociais</h4>
 					<ul class="plain">
-						<li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-						<li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
+						<li><a href="https://twitter.com/" target="_blank"><i
+									class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+						<li><a href="https://www.facebook.com/" target="_blank"><i
+									class="icon fa-facebook">&nbsp;</i>Facebook</a>
 						</li>
-						<li><a href="#"><i class="icon fa-rss">&nbsp;</i>Feed RSS</a>
+						<li><a href="https://pt.wikipedia.org/wiki/RSS" target="_blank"><i
+									class="icon fa-rss">&nbsp;</i>Feed RSS</a>
 						</li>
-						<li><a href="https://github.com/ifal-riolargo/equipe15"><i
+						<li><a href="https://github.com/ifal-riolargo/equipe15" target="_blank"><i
 									class="icon fa-github">&nbsp;</i>Github</a></li>
 					</ul>
 				</section>
 			</div>
 			<div class="copyright">
-				&copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio
-					Largo</a>,
-				Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
+				&copy; VRawr. <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo" target="_blank">IFAL Campus
+					Rio Largo</a>,
+				Todos os direitos<a href="DireitosReservados.html" target="_blank"> reservados</a>.
 			</div>
 		</div>
 	</footer>
