--- a/equipe15/DireitosReservados.html
+++ b/equipe15/DireitosReservados.html
@@ -2,23 +2,23 @@
 <html lang="pt-br">
 
 <head>
-    <title>VRawr - Direitos reservados</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+	<title>VRawr - Direitos reservados</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body class="is-preload">
 
-    <!-- Header -->
-    <header id="header">
-        <a class="logo" href="index.html">VRawr</a>
-        <nav>
-            <a href="#menu">Menu</a>
-        </nav>
-    </header>
+	<!-- Header -->
+	<header id="header">
+		<a class="logo" href="index.html">VRawr</a>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
 
 	<!-- Nav -->
 	<nav id="menu">
@@ -33,35 +33,35 @@
 		</ul>
 	</nav>
 
-    <!-- CTA -->
-    <section id="cta" class="wrapper">
-        <div class="inner">
-            <h2>Direitos Reservados</h2>
-            <p>Sobre os direitos do site.</p>
-        </div>
-    </section>
+	<!-- CTA -->
+	<section id="cta" class="wrapper">
+		<div class="inner">
+			<h2>Direitos Reservados</h2>
+			<p>Sobre os direitos do site.</p>
+		</div>
+	</section>
 
-    <!-- Main -->
-    <section id="main" class="wrapper">
-        <div class="inner">
-            <div class="content">
-                <header>
-                    <h2>Sobre os direitos reservados</h2>
-                </header>
-                <p>&copy;2019-2019, VRawr Company. Todos os direitos reservados. Todos os textos, imagens, gráficos,
-                    animações, vídeos, músicas, sons e outros materiais são protegidos por direitos autorais e outros
-                    direitos de propriedade intelectual pertencentes à VRawr Company, suas subsidiárias, afiliadas e
-                    licenciantes.</p>
-                <p>A VRawr Company é, também, proprietária dos direitos autorais de desenvolvimento, seleção,
-                    coordenação, diagramação e disposição dos materiais neste site. É expressamente vedada a cópia ou
-                    reprodução destes materiais para uso ou distribuição comercial, a modificação destes materiais, sua
-                    inclusão em outros websites e o seu envio e publicação em outros meios digitais e físicos, ou de
-                    qualquer outra forma dispor de tais materiais sem a devida autorização, estando sujeito às
-                    responsabilidades e sanções legais.</p>
-                <hr />
-            </div>
-        </div>
-    </section>
+	<!-- Main -->
+	<section id="main" class="wrapper">
+		<div class="inner">
+			<div class="content">
+				<header>
+					<h2>Sobre os direitos reservados</h2>
+				</header>
+				<p>&copy;2019-2019, VRawr Company. Todos os direitos reservados. Todos os textos, imagens, gráficos,
+					animações, vídeos, músicas, sons e outros materiais são protegidos por direitos autorais e outros
+					direitos de propriedade intelectual pertencentes à VRawr Company, suas subsidiárias, afiliadas e
+					licenciantes.</p>
+				<p>A VRawr Company é, também, proprietária dos direitos autorais de desenvolvimento, seleção,
+					coordenação, diagramação e disposição dos materiais neste site. É expressamente vedada a cópia ou
+					reprodução destes materiais para uso ou distribuição comercial, a modificação destes materiais, sua
+					inclusão em outros websites e o seu envio e publicação em outros meios digitais e físicos, ou de
+					qualquer outra forma dispor de tais materiais sem a devida autorização, estando sujeito às
+					responsabilidades e sanções legais.</p>
+				<hr />
+			</div>
+		</div>
+	</section>
 
 	<!-- Footer -->
 	<footer id="footer">
@@ -78,39 +78,42 @@
 				<section>
 					<h4>Categorias</h4>
 					<ul class="alt">
-						<li><a href="Contato.html">Contato</a></li>
-						<li><a href="Localização.html">Localização</a></li>
-						<li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
-						<li><a href="DireitosReservados.html">Direitos Reservados</a></li>
+						<li><a href="Contato.html" target="_blank">Contato</a></li>
+						<li><a href="Localização.html" target="_blank">Localização</a></li>
+						<li><a href="PoliticaPrivacidade.html" target="_blank">Política de Privacidade</a></li>
+						<li><a href="DireitosReservados.html" target="_blank">Direitos Reservados</a></li>
 					</ul>
 				</section>
 				<section>
 					<h4>Siga nossas redes sociais</h4>
 					<ul class="plain">
-						<li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-						<li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
+						<li><a href="https://twitter.com/" target="_blank"><i
+									class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+						<li><a href="https://www.facebook.com/" target="_blank"><i
+									class="icon fa-facebook">&nbsp;</i>Facebook</a>
 						</li>
-						<li><a href="#"><i class="icon fa-rss">&nbsp;</i>Feed RSS</a>
+						<li><a href="https://pt.wikipedia.org/wiki/RSS" target="_blank"><i
+									class="icon fa-rss">&nbsp;</i>Feed RSS</a>
 						</li>
-						<li><a href="https://github.com/ifal-riolargo/equipe15"><i
+						<li><a href="https://github.com/ifal-riolargo/equipe15" target="_blank"><i
 									class="icon fa-github">&nbsp;</i>Github</a></li>
 					</ul>
 				</section>
 			</div>
 			<div class="copyright">
-				&copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio
-					Largo</a>,
-				Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
+				&copy; VRawr. <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo" target="_blank">IFAL Campus
+					Rio Largo</a>,
+				Todos os direitos<a href="DireitosReservados.html" target="_blank"> reservados</a>.
 			</div>
 		</div>
 	</footer>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
 
