--- a/equipe15/Localização.html
+++ b/equipe15/Localização.html
@@ -2,23 +2,23 @@
 <html lang="pt-br">
 
 <head>
-    <title>VRawr - Localização</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+	<title>VRawr - Localização</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body class="is-preload">
 
-    <!-- Header -->
-    <header id="header">
-        <a class="logo" href="index.html">VRawr</a>
-        <nav>
-            <a href="#menu">Menu</a>
-        </nav>
-    </header>
+	<!-- Header -->
+	<header id="header">
+		<a class="logo" href="index.html">VRawr</a>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
 
 	<!-- Nav -->
 	<nav id="menu">
@@ -33,24 +33,24 @@
 		</ul>
 	</nav>
 
-    <!-- CTA -->
-    <section id="cta" class="wrapper">
-        <div class="inner">
-            <h2>Localização</h2>
-            <p>Venha nos visitar! :D</p>
-        </div>
-    </section>
+	<!-- CTA -->
+	<section id="cta" class="wrapper">
+		<div class="inner">
+			<h2>Localização</h2>
+			<p>Venha nos visitar! :D</p>
+		</div>
+	</section>
 
-    <!-- Main -->
-    <section id="main" class="wrapper">
-        <div class="inner">
-            <div class="content">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15739.884601458283!2d-35.8040249!3d-9.5112359!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf3508b4ce144c3e!2sIFAL%20-%20Campus%20Rio%20Largo!5e0!3m2!1spt-BR!2sbr!4v1575589021467!5m2!1spt-BR!2sbr"
-                    width="1010" height="800" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-            </div>
-        </div>
-    </section>
+	<!-- Main -->
+	<section id="main" class="wrapper">
+		<div class="inner">
+			<div class="content">
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15739.884601458283!2d-35.8040249!3d-9.5112359!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf3508b4ce144c3e!2sIFAL%20-%20Campus%20Rio%20Largo!5e0!3m2!1spt-BR!2sbr!4v1575589021467!5m2!1spt-BR!2sbr"
+					width="1010" height="800" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+			</div>
+		</div>
+	</section>
 
 	<!-- Footer -->
 	<footer id="footer">
@@ -67,39 +67,42 @@
 				<section>
 					<h4>Categorias</h4>
 					<ul class="alt">
-						<li><a href="Contato.html">Contato</a></li>
-						<li><a href="Localização.html">Localização</a></li>
-						<li><a href="PoliticaPrivacidade.html">Política de Privacidade</a></li>
-						<li><a href="DireitosReservados.html">Direitos Reservados</a></li>
+						<li><a href="Contato.html" target="_blank">Contato</a></li>
+						<li><a href="Localização.html" target="_blank">Localização</a></li>
+						<li><a href="PoliticaPrivacidade.html" target="_blank">Política de Privacidade</a></li>
+						<li><a href="DireitosReservados.html" target="_blank">Direitos Reservados</a></li>
 					</ul>
 				</section>
 				<section>
 					<h4>Siga nossas redes sociais</h4>
 					<ul class="plain">
-						<li><a href="https://twitter.com/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-						<li><a href="https://www.facebook.com/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
+						<li><a href="https://twitter.com/" target="_blank"><i
+									class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+						<li><a href="https://www.facebook.com/" target="_blank"><i
+									class="icon fa-facebook">&nbsp;</i>Facebook</a>
 						</li>
-						<li><a href="#"><i class="icon fa-rss">&nbsp;</i>Feed RSS</a>
+						<li><a href="https://pt.wikipedia.org/wiki/RSS" target="_blank"><i
+									class="icon fa-rss">&nbsp;</i>Feed RSS</a>
 						</li>
-						<li><a href="https://github.com/ifal-riolargo/equipe15"><i
+						<li><a href="https://github.com/ifal-riolargo/equipe15" target="_blank"><i
 									class="icon fa-github">&nbsp;</i>Github</a></li>
 					</ul>
 				</section>
 			</div>
 			<div class="copyright">
-				&copy; VRawr. IFAL Campus <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo">Rio
-					Largo</a>,
-				Todos os direitos<a href="DireitosReservados.html"> reservados</a>.
+				&copy; VRawr. <a href="https://www2.ifal.edu.br/campus/site/campus_riolargo" target="_blank">IFAL Campus
+					Rio Largo</a>,
+				Todos os direitos<a href="DireitosReservados.html" target="_blank"> reservados</a>.
 			</div>
 		</div>
 	</footer>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
 
