--- a/equipe15/listaEmpregos.html
+++ b/equipe15/listaEmpregos.html
@@ -31,7 +31,7 @@
 	<nav id="menu">
 		<ul class="links">
 			<li><a href="index.html">Página Principal</a></li>
-			<li><a href="artigos.html">Artigos</a></li>
+			<li><a href="artigos.html">Artigos publicados</a></li>
 			<li><a href="cursos.html">Nossos cursos e eventos</a></li>
 			<li><a href="listaEmpregos.html">Oportunidades de emprego</a></li>
 			<li><a href="Contato.html">Contato</a></li>
