Icones agora clicáveis e redirecionam a sua respectiva página

--- a/equipe15/Contato.html
+++ b/equipe15/Contato.html
@@ -46,7 +46,7 @@
         <section>
             <div class="content">
                 <header>
-                    <a class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
+                    <a href="Localização.html" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
                     <h3>Localização</h3>
                 </header>
                 <p>
@@ -67,7 +67,7 @@
         <section>
             <div class="content">
                 <header>
-                    <a class="icon fa-inbox"><span class="label">Icon</span></a>
+                    <a href="mailto:contato@vrawr.com.br" class="icon fa-inbox"><span class="label">Icon</span></a>
                     <h3>E-mail</h3>
                 </header>
                 <p><a href="mailto:contato@vrawr.com.br">contato@vrawr.com.br</a></p>
