Correção no H2 no segundo artigo

--- a/equipe15/artigos.html
+++ b/equipe15/artigos.html
@@ -58,7 +58,7 @@
                 <hr />
 
                 <header>
-                    <h id="sobreoVRaptor">Sobre o VRaptor</h>
+                    <h2 id="sobreoVRaptor">Sobre o VRaptor</h2>
                 </header>
 
                 <p> O Vraptor é um framework que está
